# jetson-demos

./: README.md
object_detection/YOLOv10/: export_onnx_with_ultralytics.py  export_trt_engine.sh  inference_onnx.py  inference_trt.py  inference_trt_camera.py  inference_ultralytics.py  utils.py
portrait-matting/: README.md  inference_trt.py  inference_trt_camera.py
portrait-matting/torch2onnx/: export.py
portrait_matting/modnet/: README.md  export_onnx_trt-engine.sh  inference_onnx.py
toys/OpenCV_C_demo/: CMakeLists.txt
toys/OpenCV_C_demo/src/: face_detection.cpp
